--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
-                    <img src="assets/img/219652349_4074251725945377_5633857243973298297_n.jpg" class="img-fluid" alt="">
+                    <img src="assets/img/106102324_2989469317756962_4140893123911074869_n (1).jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Diseñador &amp; Desarrollador Web</h3>
