--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong>
                                     <span>27 Jul</span></li>
                                 <li><i class="bi bi-chevron-right"></i>
-                                    <strong>Website:</strong> <span>https://adonayrv.spartan-soft.com</span><a
+                                    <strong>Website:</strong> <span>https://adonay753.github.io/Portafolio/</span><a
                                             href="https://adonayrv.spartan-soft.com" target="_blank" rel="arrow"
                                             class="icon"><i class="bx bx-link-external"></i></a></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="col-lg-6">
                             <ul>
-                                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
+                                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
                                 <!-- <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>-->
                                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>adonay_753@hotmail.com</span>
                                 </li>
@@ -395,7 +395,7 @@
                         <ul>
                             <li>Cableado exterior</li>
                             <li>Instalacion servidor Unifi</li>
-                            <li>Configración en tipologia mesh
+                            <li>Configuración en tipologia mesh
                             </li>
                         </ul>
                     </div>
@@ -406,8 +406,8 @@
                         <p><em>Colegio "Constantino I" Cochabamba-Bolivia</em></p>
                         <ul>
                             <li>Cableado interior</li>
-                            <li>Instalacion router Mikrotik</li>
-                            <li>Configración hotspot (Login pesonalizado)</li>
+                            <li>Instalación router Mikrotik</li>
+                            <li>Configuración hotspot (Login pesonalizado)</li>
                             <li>Limitador de velocidad por perfiles</li>
                             <li>Configuración firewall</li>
                             <li>Configuración parental control</li>
@@ -420,7 +420,7 @@
                         <p><em>Branding Studio, Cochabamba-Bolivia</em></p>
                         <ul>
                             <li>Configuración servidor de correos</li>
-                            <li>COnfiguracion CMS "Wordpress"</li>
+                            <li>COnfiguración CMS "Wordpress"</li>
                             <li>Diseño y puesta en marcha</li>
                         </ul>
                     </div>
