--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                         class="bx bxl-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/adonay-ramos-villafuerte-4bb20117b/" target="_blank" rel="linkedin"
                    class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.behance.net/ado753/" target="_blank" rel="linkedin"
+                   class="linkedin"><i class="bx bxl-behance"></i></a>
+
             </div>
         </div>
 
@@ -82,7 +85,7 @@
 <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
         <h1>Adonay Ramos</h1>
-        <p>Soy <span class="typed" data-typed-items="Diseñador, Desarrollador, Freelancer, Fotografo"></span></p>
+        <p>Soy <span class="typed" data-typed-items="Diseñador, Desarrollador, Freelancer"></span></p>
     </div>
 </section><!-- End Hero -->
 
@@ -290,7 +293,7 @@
                         <p><em>Entusiasta y soñador.</em></p>
                         <ul>
                             <li>(+591) 60369408</li>
-                            <li>adonayramos19@gmail.com</li>
+                            <li>adona_753@hotmail.com</li>
                         </ul>
                     </div>
 
@@ -414,16 +417,18 @@
                         </ul>
                     </div>
 
+
                     <div class="resume-item">
-                        <h4>Diseño web "Branding Studio"</h4>
-                        <h5>2022</h5>
-                        <p><em>Branding Studio, Cochabamba-Bolivia</em></p>
+                        <h4>"Miembro del equipo de diseño y Sponsors de la Python Conferences"</h4>
+                        <h5>2020</h5>
+                        <p><em>Cochabamba-Bolivia</em></p>
                         <ul>
-                            <li>Configuración servidor de correos</li>
-                            <li>COnfiguración CMS "Wordpress"</li>
-                            <li>Diseño y puesta en marcha</li>
+                            <li>Preparación de artes para el evento  </li>
+                            <li>Elaboracion de propuesta de plan para sponsors</li>
                         </ul>
                     </div>
+
+
 
                     <div class="resume-item">
                         <h4>IT Support</h4>
@@ -434,6 +439,54 @@
                             <li>Asistencia remota</li>
                             <li>Armado e instalación de equipos de oficina</li>
                             <li>Configuración Impresora IP</li>
+                        </ul>
+                    </div>
+
+                    <div class="resume-item">
+                        <h4>Diseño web "Brand Studio"</h4>
+                        <h5>2022</h5>
+                        <p><em>Brand Studio, Cochabamba-Bolivia</em></p>
+                        <p ><em><a href="https://brandstudio.com.bo/" target="blank">https://brandstudio.com.bo</a> </em></p>
+
+                        <ul>
+                            <li>Configuración servidor de correos</li>
+                            <li>Configuración CMS "Wordpress"</li>
+                            <li>Planteamiento pasarela de pago y publicacion de articulos</li>
+                            <li>Diseño y puesta en marcha</li>
+                        </ul>
+                    </div>
+
+                    <div class="resume-item">
+                        <h4>Diseño web "Kocha Sport"</h4>
+                        <h5>2022</h5>
+                        <p><em>Kocha Sport, Cochabamba-Bolivia</em></p>
+                        <p ><em><a href="https://Kochasport.com.bo/" target="blank">https://brandstudio.com.bo</a> </em></p>
+
+                        <ul>
+                            <li>Configuración servidor de correos</li>
+                            <li>Configuración CMS "Wordpress"</li>
+                            <li>Diseño y puesta en marcha</li>
+                        </ul>
+                    </div>
+
+                    <div class="resume-item">
+                        <h4>"Miembro del equipo de diseño de la Python Conferences"</h4>
+                        <h5>2022</h5>
+                        <p><em>Cochabamba-Bolivia</em></p>
+                        <ul>
+                            <li>Preparación de artes para el evento  </li>
+                        </ul>
+                    </div>
+
+                    <div class="resume-item">
+                        <h4>"Director de Diseño y UI/UX en Spartan Soft."</h4>
+                        <h5>2023-...</h5>
+                        <p><em>Cochabamba-Bolivia</em></p>
+                        <p ><em><a href="https://spartan-soft.com/" target="blank">https://spartan-soft.com/</a> </em></p>
+                        <ul>
+                            <li>Coordinación de equipos </li>
+                            <li>Revision de Proyectos </li>
+                            <li>Mantenimiento de proyectos LTS</li>
                         </ul>
                     </div>
 
